            - Routine filterForDisjointPairs() no longer requires all surfaces
              to use the same coordinate system.
            - Removed allowsOriented() completely, since TONS are now
              handled by a completely different collection of classes.
            - Renamed allowsSpun() to allowsNonCompact(); the old name
              is kept as a deprecated alias.
            - When cloning a packet tree, a cloned normal surface list
              will now refer back to the original triangulation, not a
              clone of the original triangulation.
            - Deprecated writeAllSurfaces(); just use writeTextLong() or
              detail() instead.
        Class NormalSurfaceVector, NormalHypersurfaceVector:
            - Removed completely.  Normal surfaces/hypersurfaces now hold
              their coordinates using a plain Vector<LargeInteger>.
        Enum NormalTransform:
            - New enumeration to support conversions and filters.
        Class NoSolution:
            - New exception class.
        Class NotImplemented:
            - New exception class.
        Class NSVectorMirrored:
            - Changed makeMirror() to take its triangulation by reference,
              not by pointer.  Also removed the static versions of makeMirror();
              only the virtual (non-static) function is used.
        Class Packet:
            - Packets are now managed exclusively by std::shared_ptr.
              Creating a new packet *without* wrapping it in a std::shared_ptr
              is no longer allowed.  To convert an existing raw packet pointer
              into a std::shared_ptr, use shared_from_this().  The old
              safeDelete() is now removed.
            - Inner class ChangeEventSpan's constructor now takes its
              argument by reference.
            - Routines dependsOnParent() and isPacketEditable() are
              deprecated, and now always return false and true respectively.