@@ -48,14 +48,9 @@ namespace regina {
  * Represents options and variants of algorithms for enumerating various
  * types of angle structures on 3-manifold triangulations.
  *
- * These options are typically combined in a bitwise fashion using the
- * AngleAlg type, and then passed to enumeration routines such as
- * the AngleStructures class constructor.
- *
- * \ifacespython The values in this enumeration type are present, but
- * they are treated by Python as AngleAlg objects (and they can be
- * combined and/or queried as such).
- * The underlying enumeration type is not exposed to Python.
+ * These options can be combined using the bitwise OR operator, and then
+ * passed to enumeration routines such as the AngleStructures
+ * class constructor.
  *
  * \ingroup angle
  */
@@ -118,8 +113,10 @@ enum AngleAlgFlags {
 /**
  * A combination of flags for angle structure enumeration algorithms.
  *
- * \ifacespython This is present, and all values in the AngleAlgFlags
- * enumeration type are treated as members of this AngleAlg class.
+ * If a function requires an AngleAlg object as an argument, you can
+ * pass a single AngleAlgFlags constant, or a combination of such
+ * constants using the bitwise OR operator, or empty braces {} to indicate
+ * no flags at all.
  *
  * \ingroup angle
  */
