@@ -61,20 +61,20 @@ namespace {
      * Writes a piece of the CSV header corresponding to the given set
      * of optional fields.
      */
-    void writePropHeader(std::ostream& out, int fields) {
-        if (fields & surfaceExportName)
+    void writePropHeader(std::ostream& out, SurfaceExport fields) {
+        if (fields.has(surfaceExportName))
             out << "name,";
-        if (fields & surfaceExportEuler)
+        if (fields.has(surfaceExportEuler))
             out << "euler,";
-        if (fields & surfaceExportOrient)
+        if (fields.has(surfaceExportOrient))
             out << "orientable,";
-        if (fields & surfaceExportSides)
+        if (fields.has(surfaceExportSides))
             out << "sides,";
-        if (fields & surfaceExportBdry)
+        if (fields.has(surfaceExportBdry))
             out << "boundary,";
-        if (fields & surfaceExportLink)
+        if (fields.has(surfaceExportLink))
             out << "link,";
-        if (fields & surfaceExportType)
+        if (fields.has(surfaceExportType))
             out << "type,";
     }
 
@@ -82,30 +82,31 @@ namespace {
      * Writes a piece of the CSV data for the given normal surface
      * corresponding to the given set of optional fields.
      */
-    void writePropData(std::ostream& out, const NormalSurface& s, int fields) {
-        if (fields & surfaceExportName) {
+    void writePropData(std::ostream& out, const NormalSurface& s,
+            SurfaceExport fields) {
+        if (fields.has(surfaceExportName)) {
             if (! s.name().empty())
                 writeCSVQuotedString(out, s.name().c_str());
             out << ',';
         }
-        if (fields & surfaceExportEuler) {
+        if (fields.has(surfaceExportEuler)) {
             if (s.isCompact())
                 out << s.eulerChar();
             out << ',';
         }
-        if (fields & surfaceExportOrient) {
+        if (fields.has(surfaceExportOrient)) {
             if (s.isCompact()) {
                 out << (s.isOrientable() ? "TRUE" : "FALSE");
             }
             out << ',';
         }
-        if (fields & surfaceExportSides) {
+        if (fields.has(surfaceExportSides)) {
             if (s.isCompact()) {
                 out << (s.isTwoSided() ? '2' : '1');
             }
             out << ',';
         }
-        if (fields & surfaceExportBdry) {
+        if (fields.has(surfaceExportBdry)) {
             if (! s.isCompact()) {
                 try {
                     MatrixInt slopes = s.boundaryIntersections();
@@ -125,7 +126,7 @@ namespace {
                 out << "none";
             out << ',';
         }
-        if (fields & surfaceExportLink) {
+        if (fields.has(surfaceExportLink)) {
             // Mirror the information that gets shown in the Link column
             // in the GUI.
             const Vertex<3>* v = s.isVertexLink();
@@ -142,7 +143,7 @@ namespace {
             }
             out << ',';
         }
-        if (fields & surfaceExportType) {
+        if (fields.has(surfaceExportType)) {
             // Mirror the information that gets shown in the Type column
             // in the GUI.
             if (s.isSplitting())
@@ -157,7 +158,7 @@ namespace {
 }
 
 bool NormalSurfaces::saveCSVStandard(const char* filename,
-        int additionalFields) const {
+        SurfaceExport additionalFields) const {
     std::ofstream out(filename);
     if (! out)
         return false;
@@ -228,7 +229,7 @@ bool NormalSurfaces::saveCSVStandard(const char* filename,
 }
 
 bool NormalSurfaces::saveCSVEdgeWeight(const char* filename,
-        int additionalFields) const {
+        SurfaceExport additionalFields) const {
     std::ofstream out(filename);
     if (! out)
         return false;
